    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Upgrade to Lucene Search 2.9.1.

Bugfixes:

  * A link from a topic page to itself should be formatted as plain bold text,
    not as a link.  Reported by floatingworld.

Translation Updates:


0.8.0
=====

New Features:

  * Drop support for JDK 1.4.  Java 5 or later is now required to run JAMWiki.
  * Special:Import can now import Mediawiki files with full history, edit
    dates, and edit comments.
  * Special:Export can now export topics in Mediawiki format with full history,
    edit dates, and edit comments.
  * Mediawiki-style logs for uploads, user creation, etc are now available via
    the Special:Log page.
  * Add an optional "Show Changes" button during editing to display a diff
    view of the current edit.
  * Add diff highlighting for the portion of the line that changed (if any),
    similar to Mediawiki.
  * Allow an alternate file name to be specified as the "Destination Filename"
    when uploading, similar to Mediawiki.
  * Add links to the edited section in edit summaries on recent changes,
    history, etc, similar to Mediawiki.
  * Localize several messages in the upgrade process that were previously
    hard-coded in English.
  * Remove ability to automatically upgrade from versions prior to 0.6.0.
  * For databases that support it use auto incrementing primary keys during
    inserts to improve performance.  Suggested by Daniel Fisla (dfisla).
  * Implement caching for diffs, user information and topic versions to speed
    up page rendering.
  * Allow the HTML pre tag to be used with attributes (suggested by Skotty).
  * Refactor exception handling to throw and catch exceptions at a more
    granular level.
  * Allow JAMWiki properties to be read from outside of the WAR file or from
    system properties (urpi).